Minor refactorings e.g. removed typo in the class name 'Lanternfish'