@@ -9,8 +9,8 @@ public class Aoc2021_6 {
     private static final String DAY = "06";
     private static final String YEAR = "2021";
     private static final String USERNAME = System.getProperty("user.name");
-    public static final String BASEDIR = "C://Users//"+USERNAME+"//Downloads//AoC"+YEAR+"//";
-    public static final String FILENAME = "input"+YEAR+"_"+DAY+".txt";
+    public static final String BASEDIR = "C://Users//" + USERNAME + "//Downloads//AoC" + YEAR + "//";
+    public static final String FILENAME = "input" + YEAR + "_" + DAY + ".txt";
     //public static final String FILENAME = "sample"+YEAR+"_"+DAY+".txt";
     public static String PATH = BASEDIR + FILENAME;
 
@@ -18,8 +18,8 @@ public class Aoc2021_6 {
 
     public static void main(String[] args) {
         List<String> stringList = AocUtils.getStringList(PATH);
-        String[] sNumbers = stringList.get(0).split(",");
-       //part1(sNumbers);
+        String[] sNumbers = stringList.getFirst().split(",");
+        //part1(sNumbers);
         part2(sNumbers);
     }
 
@@ -34,15 +34,15 @@ public class Aoc2021_6 {
         for (int i = 0; i < DAYS; i++) {
             long internalTimerWasZeroFishs = fishs[0];
             // internal timer --
-            fishs[0]=fishs[1];
-            fishs[1]=fishs[2];
-            fishs[2]=fishs[3];
-            fishs[3]=fishs[4];
-            fishs[4]=fishs[5];
-            fishs[5]=fishs[6];
-            fishs[6]=fishs[7]+internalTimerWasZeroFishs; // +old generation
-            fishs[7]=fishs[8];
-            fishs[8]=internalTimerWasZeroFishs; // new generation
+            fishs[0] = fishs[1];
+            fishs[1] = fishs[2];
+            fishs[2] = fishs[3];
+            fishs[3] = fishs[4];
+            fishs[4] = fishs[5];
+            fishs[5] = fishs[6];
+            fishs[6] = fishs[7] + internalTimerWasZeroFishs; // +old generation
+            fishs[7] = fishs[8];
+            fishs[8] = internalTimerWasZeroFishs; // new generation
         }
 
         long numberOfFishs = 0;
@@ -57,28 +57,28 @@ public class Aoc2021_6 {
     }
 
     private static void part1(String[] sNumbers) {
-        List<Laternfish> fishs = new ArrayList<>();
+        List<Lanternfish> fishs = new ArrayList<>();
         // create Fishs
         for (int i = 0; i < sNumbers.length; i++) {
-            fishs.add(new Laternfish(Integer.parseInt(sNumbers[i])));
+            fishs.add(new Lanternfish(Integer.parseInt(sNumbers[i])));
         }
         System.out.println(fishs);
 
         for (int i = 1; i <= DAYS; i++) {
-            List<Laternfish> newFishs = new ArrayList<>();
+            List<Lanternfish> newFishs = new ArrayList<>();
 
-            for (Laternfish fish : fishs) {
+            for (Lanternfish fish : fishs) {
                 boolean newFish = fish.age();
 
                 if (newFish) {
-                    newFishs.add(new Laternfish(8));
+                    newFishs.add(new Lanternfish(8));
                 }
             }
             fishs.addAll(newFishs);
             //System.out.println("after day "+i+": "+fishs);
         }
 
-        System.out.println("\nResult: "+fishs.size());
+        System.out.println("\nResult: " + fishs.size());
     }
 
 }
